# nano-mm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
biz/domain/: __init__.py  book.py  order.py  quote.py  trade.py
biz/repo/: __init__.py  archive.py  exchange.py  order_tracker.py  orderbook.py  trade.py
biz/usecase/: fair_value.py  fill_simulator.py  glt_spread.py  quote_differ.py
cmd/: check_archive.py  mm.py  paper_mm.py  replay_review.py  watch_book.py  watch_quote.py
config/: __init__.py
data/archive/: __init__.py  fill_books.py  fills.py  latency.py  markout_backfill.py  mid_tape.py  orders.py  quotes.py  session.py  trades.py
data/exchange/: oms.py  paper.py
data/orderbook/: base.py  binance_spot.py  bybit_spot.py
data/trade/: binance_spot.py  bybit_spot.py
doc/: WIP.md  adverse_selection.md  arch.md  glt_spread.md  intro.md  ladder.md  paper_executor.md  roudtrip.md  spec_infra.md
log/: nano-mm.jsonl
pkg/: symbol.py
pkg/constant/: __init__.py
pkg/exapi/: __init__.py
pkg/logger/: __init__.py
pkg/metrics/: __init__.py
pkg/quant/: __init__.py  glt.py  intensity.py  ladder.py  vol.py
pkg/storage/: __init__.py  histogram.py  parquet_writer.py  schema_sql.py  sqlite_writer.py
server/: fair_value_server.py  glt_spread_server.py  mm_server.py
service/: archive_service.py  fair_value_service.py  mm_service.py  paper_executor_service.py
tests/integration/: test_archive_smoke.py  test_paper_smoke.py
tests/unit/: test_fill_simulator.py  test_glt.py  test_glt_spread.py  test_intensity.py  test_ladder.py  test_local_orderbook.py  (+4 more)
