[project]
name = "nano-mm"
version = "0.1.0"
description = "Crypto market making system (Binance + Bybit spot)"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.10",
    "msgspec>=0.18",
    "sortedcontainers>=2.4",
    "structlog>=24.1",
    "uvloop>=0.20; sys_platform != 'win32'",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmd", "server", "service", "biz", "data", "pkg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
